# DAI-Service-Coordinator

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.cpp
include/consul/: consul_client.h  server_info.h
include/grpc/: grpc_server.h  grpc_server_builder.h
include/grpc/clients/task_coordinate/: task_coordinate_client.h
resources/protos/: service_coordinate.proto  task_coordinate.proto
src/config/: config.cpp  config.h
src/consul/: consul_client.cpp  consul_client.h  server_info.cpp  server_info.h
src/grpc/: grpc_server.cpp  grpc_server_builder.cpp
src/grpc/clients/service_coordinate/: Dockerfile  service_coordinate_client.cpp  service_coordinate_client.h  service_coordinate_client_builder.cpp  service_coordinate_client_builder.h
src/grpc/clients/service_coordinator/: service_coordinator_client.cpp  service_coordinator_client.h  service_coordinator_client_builder.cpp  service_coordinator_client_builder.h
src/grpc/clients/task_coordinate/: task_coordinate_client.cpp  task_coordinate_client.h  task_coordinate_client_builder.cpp  task_coordinate_client_builder.h
src/grpc/servers/: grpc_server.cpp  grpc_server_builder.cpp  grpc_server_builder.h
src/grpc/task_coordinate/: task_coordinate_client.cpp
src/service_manager/: service_manager.cpp  service_manager.h
